# mathiu.cpp

./: CMakeLists.txt  README.md
.github/workflows/: cmake-Debug.yml  cmake.yml  coverage.yml  sanitizers.yml  valgrind.yml
cmake/: FetchMatchit.cmake
include/: diff.h  evalit.h  matchit.h  mathia.h  mathiu.h  polynomial.h  solve.h
include/mathiu/: core.h  diff.h  function_range.h  inequation.h  polynomial.h  setOp.h  solve.h
sample/: CMakeLists.txt
src/: CMakeLists.txt  core.cpp  diff.cpp  function_range.cpp  inequation.cpp  internal.h  polynomial.cpp  setOp.cpp  solve.cpp
test/: CMakeLists.txt
test/evalit/: CMakeLists.txt  expr.cpp
test/mathia/: CMakeLists.txt  auto-simplification.cpp  expr.cpp  order.cpp
test/mathiu/: CMakeLists.txt  auto-simplification.cpp  diff.cpp  expr.cpp  freeOf.cpp  functionRange.cpp  inequation.cpp  interval-comp.cpp  order.cpp  polynomial.cpp  relational.cpp  solve.cpp  substitute.cpp
